--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,25 +12,29 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Kelompok2PPB"
         tools:targetApi="31">
-
-        <!-- Jadikan SplashScreen sebagai activity utama -->
+        <activity
+            android:name=".ui.login.RegisterActivity"
+            android:theme="@style/Theme.NoTitleBar"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.LoginActivity"
+            android:exported="false"
+            android:theme="@style/Theme.NoTitleBar"
+            android:label="@string/title_activity_login" /> <!-- Jadikan SplashScreen sebagai activity utama -->
         <activity
             android:name=".SplashScreen"
-            android:theme="@style/Theme.SplashScreen"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- MainActivity dipanggil dari SplashScreen -->
+        </activity> <!-- MainActivity dipanggil dari SplashScreen -->
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.NoTitleBar"
-            android:exported="true">
-        </activity>
-
+            android:exported="true"
+            android:theme="@style/Theme.NoTitleBar" />
     </application>
 
 </manifest>
